# koopman-control

./: .gitignore  .pylintrc  MAKEFILE  README.md  data.py  lightning_model.py  loaders.py  loss_plot.py  main.py  pyproject.toml  tox.ini
conf/: config.yaml
conf/model/: koopman_ae.yaml  mlp.yaml
conf/optim/: optuna.yaml
conf/trainer/: default.yaml
models/: koopman_model.py  lightning_model.py
src/: loaders.py  main.py  writer.py
src/conf/: config.yaml
src/conf/optim/: optuna.yaml
src/conf/trainer/: default.yaml
src/koopman_control/: main.py  writer.py
src/koopman_control/loaders/: csv_loader.py  dataloaders.py  graph_npz_loaders.py  h5_loaders.py
src/koopman_control/models/: factory.py  koopman_cnn.py  koopman_gnn.py  koopman_mlp.py  koopman_model.py  neural_ode.py
src/koopman_control/utils/: callbacks.py  component_mappings.py
src/models/: koopman_model.py
utils/: callbacks.py  component_mappings.py
